# docs/swagger.json
@@ -782,6 +782,31 @@
                     }
                 }
             }
+        },
+        "/admin/ws": {
+            "get": {
+                "security": [
+                    {
+                        "AdminApiKeyAuth": []
+                    }
+                ],
+                "description": "Establishes a WebSocket connection for the admin dashboard to receive live SOS, Assistance, Reports, Alerts, and Chat updates.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin WebSocket"
+                ],
+                "summary": "Connect to Admin WebSocket",
+                "responses": {
+                    "101": {
+                        "description": "Switching Protocols",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "securityDefinitions": {
